--- a/app/components/core/Cards/Card.module.css
+++ b/app/components/core/Cards/Card.module.css
@@ -7,8 +7,11 @@
   overflow: hidden;
   z-index: 0;
   transition: all 0.3s;
-  place-self: start;
-  align-self: start;
+}
+
+.cardContentWrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .card {
@@ -77,7 +80,6 @@
   display: flex;
   align-items: center;
   padding: 8px;
-  background-color: #f7f7f9;
   border-radius: 2rem;
 }
 
@@ -125,20 +127,22 @@
   gap: 8px;
   align-items: center;
   background-color: #f7f7f9;
-  padding: 14px 18px;
+  padding: 8px 12px;
   border-radius: 16px;
   max-width: 80%;
   transition: margin 0.3s ease;
+  border: 1px rgba(0, 0, 0, 0.05) solid;
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); */
 }
 
 .featureItem:nth-child(odd) {
-  transform: translateX(-1em);
+  transform: translateX(-2em);
   /* margin-left: clamp(0px, 64px, 64px);
   margin-right: clamp(0px, 18px, 18px); */
 }
 
 .featureItem:nth-child(even) {
-  transform: translateX(1em);
+  transform: translateX(2em);
   /* margin-right: clamp(0px, 64px, 64px);
   margin-left: clamp(0px, 18px, 18px); */
 }
@@ -155,6 +159,7 @@
 
 .featureIcon {
   color: #6367f7;
+  width: 24px;
 }
 
 .footer {
