--- a/app/components/core/SideBySideSplit/SideBySideSplit.module.css
+++ b/app/components/core/SideBySideSplit/SideBySideSplit.module.css
@@ -1,29 +1,32 @@
 .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    display: flex;
+    flex-direction: row;
     gap: 2rem;
     width: 100%;
-    margin: 0 auto;
-    padding: 0 1rem;
-    justify-content: left;
-    align-content: left;
+    max-width: 1200px;
+    justify-content: center;
+    align-content: center;
     align-items: center;
+    place-self: center;
 }
 
 .rightSide {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
+.leftSide {
+    width: 100%;
+}
+
 .image {
     border-radius: 3rem;
-    width: 100%;
+    object-fit: cover;
     padding: 24px;
     background: #9000ff;
-    background: 
-    linear-gradient(90deg,#adadfb26 0%,
-     #adadfb00 100%);
+    background: linear-gradient(90deg, #adadfb26 0%, #adadfb00 100%);
 }
 
 .title {
@@ -31,10 +34,29 @@
     white-space: pre-wrap;
 }
 
-
 .description {
     color: #737377;
     font-size: 1.1em;
     max-width: 600px;
     white-space: pre-wrap;
+}
+
+@media (width <=1000px) {
+    .container,
+    .leftSide {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .rightSide,
+    .leftSide {
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+    }
+
+    .image {
+        width: 90%;
+        background: #adadfb26;
+    }
 }
