--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -4,6 +4,23 @@ html {
   scroll-behavior: smooth;
 }
 
+@keyframes ripple {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
+}
+
+.animate-ripple {
+  animation: ripple 0.6s linear;
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  pointer-events: none;
+  z-index: 40;
+}
+
+
 @font-face {
   font-family: Vazirmatn;
   src: url('/fonts/webfonts/Vazirmatn-Thin.woff2') format('woff2');
